--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 
 #5432 for local test, 5433 for container
-#spring.datasource.url=jdbc:postgresql://localhost:5433/Shop_Project_DB
-spring.datasource.url=jdbc:postgresql://shop_db:5432/Shop_Project_D
+spring.datasource.url=jdbc:postgresql://localhost:5432/Shop_Project_DB
+#spring.datasource.url=jdbc:postgresql://shop_db:5433/Shop_Project_D
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
@@ -14,8 +14,16 @@ spring.jpa.show-sql=true
 server.address=0.0.0.0
 server.port=8080
 
+spring.security.oauth2.client.registration.github.client-id=Ov23limIirY4kqAfNKkJ
+spring.security.oauth2.client.registration.github.client-secret=2db3b36f949c447e98c88ddd3c5a9392117f9417
+spring.security.oauth2.client.registration.github.scope=user:email
 
+
+spring.security.oauth2.client.registration.google.client-id=506686656331-h9ksh8k52mgd1oo46h3rn0mjstit4nqu.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
 
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.csrf=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
